k8s/ingress-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
spec:
  selector:
    app: webserver
  ports:
  - port: 80
    targetPort: 80
